# construction_yolo

./: .dockerignore  .env.example  .gitignore  DOCKER_GUIDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_all_training_cli.sh  train_yolo26_cli.py
code/: README.md  convert_json_to_yolo_ultralytics.py  infer_yolo26.py  yolo26_train.py  yolo26_train_cli.py  yolo_train.py
dataset/: data.yml
dataset/train/: labels.cache
dataset/valid/: labels.cache
